@@ -3,27 +3,28 @@ package org.monarchinitiative.phenol.ontology.data;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import com.google.common.collect.ImmutableList;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-class TermSynonymTest {
+import java.util.List;
+
+public class TermSynonymTest {
 
   private TermSynonym termSynonym;
 
   @BeforeEach
-  void setUp() {
+  public void setUp() {
     termSynonym =
         new TermSynonym(
             "synonym",
             TermSynonymScope.EXACT,
             "BRITISH_ENGLISH",
-            ImmutableList.of(new TermXref(TermId.of("HP:0000001"),"term description")),
+            List.of(new TermXref(TermId.of("HP:0000001"),"term description")),
           "http://purl.obolibrary.org/obo/hp.obo#layperson");
   }
 
   @Test
-  void testQueryFunctions() {
+  public void testQueryFunctions() {
     assertEquals("synonym", termSynonym.getValue());
     assertEquals(TermSynonymScope.EXACT, termSynonym.getScope());
     assertEquals("BRITISH_ENGLISH", termSynonym.getSynonymTypeName());
@@ -36,7 +37,7 @@ class TermSynonymTest {
   }
 
   @Test
-  void testLaypersonLabel() {
+  public void testLaypersonLabel() {
     assertTrue(termSynonym.isLayperson());
   }
 }
