@@ -1,11 +1,8 @@
 package org.monarchinitiative.phenol.io;
 
-import com.google.common.collect.ImmutableMap;
 import org.jgrapht.graph.DefaultDirectedGraph;
 import org.junit.jupiter.api.BeforeAll;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
-import org.monarchinitiative.phenol.base.PhenolException;
 import org.monarchinitiative.phenol.graph.IdLabeledEdge;
 import org.monarchinitiative.phenol.ontology.data.Ontology;
 import org.monarchinitiative.phenol.ontology.data.SimpleXref;
@@ -13,10 +10,7 @@ import org.monarchinitiative.phenol.ontology.data.Term;
 import org.monarchinitiative.phenol.ontology.data.TermId;
 
 import java.nio.file.Paths;
-import java.util.Collection;
-import java.util.List;
-import java.util.Optional;
-import java.util.Set;
+import java.util.*;
 import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -94,7 +88,7 @@ public class OntologyLoaderMpoTest {
   @Test
   public void testGetAllFourTerms() {
     Collection<Term> terms = ontology.getTerms();
-    Set<TermId> tids = terms.stream().map(Term::getId).collect(Collectors.toSet());
+    Set<TermId> tids = terms.stream().map(Term::id).collect(Collectors.toSet());
     assertTrue(tids.contains(TermId.of("MP:0000001")));
     assertTrue(tids.contains(TermId.of("MP:0001186")));
     assertTrue(tids.contains(TermId.of("MP:0001188")));
@@ -110,6 +104,6 @@ public class OntologyLoaderMpoTest {
 
     assertEquals(3, graph.edgeSet().size());
     assertEquals(TermId.of("MP:0000001"), ontology.getRootTermId());
-    assertEquals(ImmutableMap.of("data-version","http://purl.obolibrary.org/obo/mp/releases/2017-06-05/mp.owl"), ontology.getMetaInfo());
+    assertEquals(Map.of("data-version","http://purl.obolibrary.org/obo/mp/releases/2017-06-05/mp.owl"), ontology.getMetaInfo());
   }
 }
