@@ -1,8 +1,5 @@
 package org.monarchinitiative.phenol.io.obographs;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import org.geneontology.obographs.core.model.*;
 import org.junit.jupiter.api.Test;
 import org.monarchinitiative.phenol.base.PhenolRuntimeException;
@@ -11,43 +8,45 @@ import org.monarchinitiative.phenol.ontology.data.*;
 import org.prefixcommons.CurieUtil;
 
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 /**
  * @author Jules Jacobsen <j.jacobsen@qmul.ac.uk>
  */
-class OboGraphDocumentAdaptorTest {
+public class OboGraphDocumentAdaptorTest {
 
   @Test
-  void testNullGraphDocument() {
+  public void testNullGraphDocument() {
     assertThrows(NullPointerException.class, () -> OboGraphDocumentAdaptor.builder().build(null));
   }
 
   @Test
-  void testEmptyGraphDocument() {
+  public void testEmptyGraphDocument() {
     GraphDocument graphDocument = new GraphDocument.Builder().build();
     assertThrows(PhenolRuntimeException.class, () -> OboGraphDocumentAdaptor.builder().build(graphDocument), "GraphDocument is empty");
   }
 
   @Test
-  void testEmptyGraph() {
+  public void testEmptyGraph() {
     Graph graph = new Graph.Builder().build();
-    GraphDocument graphDocument = new GraphDocument.Builder().graphs(ImmutableList.of(graph)).build();
+    GraphDocument graphDocument = new GraphDocument.Builder().graphs(List.of(graph)).build();
     assertThrows(PhenolRuntimeException.class, () -> OboGraphDocumentAdaptor.builder().build(graphDocument), "No nodes found in loaded ontology.");
   }
 
   @Test
-  void testGraphNoEdges() {
+  public void testGraphNoEdges() {
     Node root = new Node.Builder().id("owl:Thing").label("root").type(Node.RDFTYPES.CLASS).build();
-    List<Node> nodes = ImmutableList.of(root);
+    List<Node> nodes = List.of(root);
     Graph graph = new Graph.Builder().nodes(nodes).build();
-    GraphDocument graphDocument = new GraphDocument.Builder().graphs(ImmutableList.of(graph)).build();
+    GraphDocument graphDocument = new GraphDocument.Builder().graphs(List.of(graph)).build();
     assertThrows(PhenolRuntimeException.class, () -> OboGraphDocumentAdaptor.builder().build(graphDocument), "No edges found in loaded ontology.");
   }
 
   @Test
-  void testRemovesUnknownCurie() {
+  public void testRemovesUnknownCurie() {
 
     Node root = new Node.Builder()
       .id("http://purl.obolibrary.org/obo/HP_0000001")
@@ -61,13 +60,13 @@ class OboGraphDocumentAdaptorTest {
       .type(Node.RDFTYPES.CLASS)
       .build();
 
-    List<Node> nodes = ImmutableList.of(root, unknown);
+    List<Node> nodes = List.of(root, unknown);
 
     Edge edge = new Edge.Builder().sub(unknown.getId()).pred("is_a").obj(root.getId()).build();
-    List<Edge> edges = ImmutableList.of(edge);
+    List<Edge> edges = List.of(edge);
 
     Graph graph = new Graph.Builder().nodes(nodes).edges(edges).build();
-    GraphDocument graphDocument = new GraphDocument.Builder().graphs(ImmutableList.of(graph)).build();
+    GraphDocument graphDocument = new GraphDocument.Builder().graphs(List.of(graph)).build();
 
     OboGraphDocumentAdaptor instance = OboGraphDocumentAdaptor.builder().build(graphDocument);
     assertEquals(1, instance.getTerms().size());
@@ -75,7 +74,7 @@ class OboGraphDocumentAdaptorTest {
   }
 
   @Test
-  void testCanManuallyAddUnknownCurie() {
+  public void testCanManuallyAddUnknownCurie() {
 
     Node root = new Node.Builder()
       .id("http://purl.obolibrary.org/obo/HP_0000001")
@@ -89,16 +88,16 @@ class OboGraphDocumentAdaptorTest {
       .type(Node.RDFTYPES.CLASS)
       .build();
 
-    List<Node> nodes = ImmutableList.of(root, unknown);
+    List<Node> nodes = List.of(root, unknown);
 
     Edge edge = new Edge.Builder().sub(unknown.getId()).pred("is_a").obj(root.getId()).build();
-    List<Edge> edges = ImmutableList.of(edge);
+    List<Edge> edges = List.of(edge);
 
     Graph graph = new Graph.Builder().nodes(nodes).edges(edges).build();
-    GraphDocument graphDocument = new GraphDocument.Builder().graphs(ImmutableList.of(graph)).build();
+    GraphDocument graphDocument = new GraphDocument.Builder().graphs(List.of(graph)).build();
 
     // WIBBLE id prefix is not in the default list, so add it here so that nodes and edges with this idspace are included
-    CurieUtil curieUtil = CurieUtilBuilder.withDefaultsAnd(ImmutableMap.of("WIBBLE", "http://wibble.org/WIBBLE_"));
+    CurieUtil curieUtil = CurieUtilBuilder.withDefaultsAnd(Map.of("WIBBLE", "http://wibble.org/WIBBLE_"));
 
     OboGraphDocumentAdaptor instance = OboGraphDocumentAdaptor.builder().curieUtil(curieUtil).build(graphDocument);
     assertEquals(2, instance.getTerms().size());
@@ -106,7 +105,7 @@ class OboGraphDocumentAdaptorTest {
   }
 
   @Test
-  void testPropertyNodesAreNotIncluded() {
+  public void testPropertyNodesAreNotIncluded() {
 
     Node root = new Node.Builder()
       .id("http://purl.obolibrary.org/obo/HP_0000001")
@@ -120,26 +119,26 @@ class OboGraphDocumentAdaptorTest {
       .type(Node.RDFTYPES.PROPERTY)
       .build();
 
-    List<Node> nodes = ImmutableList.of(root, fluffy);
+    List<Node> nodes = List.of(root, fluffy);
 
     Edge edge = new Edge.Builder().sub(fluffy.getId()).pred("subPropertyOf").obj(root.getId()).build();
-    List<Edge> edges = ImmutableList.of(edge);
+    List<Edge> edges = List.of(edge);
 
     Graph graph = new Graph.Builder().nodes(nodes).edges(edges).build();
 
-    GraphDocument graphDocument = new GraphDocument.Builder().graphs(ImmutableList.of(graph)).build();
+    GraphDocument graphDocument = new GraphDocument.Builder().graphs(List.of(graph)).build();
 
     OboGraphDocumentAdaptor instance = OboGraphDocumentAdaptor.builder().build(graphDocument);
 
     Term rootTerm = Term.of(TermId.of("HP:0000001"), "root");
-    assertEquals(ImmutableList.of(rootTerm), instance.getTerms());
+    assertEquals(List.of(rootTerm), instance.getTerms());
     // TODO - should there be any relationships between a property and a class in here?
     // We deliberately skip property nodes when converting them, but this check isn't performed for edges
 //    assertTrue(instance.getRelationships().isEmpty());
   }
 
   @Test
-  void testCanManuallyFilterForCurie() {
+  public void testCanManuallyFilterForCurie() {
 
     Node root = new Node.Builder()
       .id("http://purl.obolibrary.org/obo/HP_0000001")
@@ -153,29 +152,29 @@ class OboGraphDocumentAdaptorTest {
       .type(Node.RDFTYPES.CLASS)
       .build();
 
-    List<Node> nodes = ImmutableList.of(root, unknown);
+    List<Node> nodes = List.of(root, unknown);
 
     Edge edge = new Edge.Builder().sub(unknown.getId()).pred("is_a").obj(root.getId()).build();
-    List<Edge> edges = ImmutableList.of(edge);
+    List<Edge> edges = List.of(edge);
 
     Graph graph = new Graph.Builder().nodes(nodes).edges(edges).build();
-    GraphDocument graphDocument = new GraphDocument.Builder().graphs(ImmutableList.of(graph)).build();
+    GraphDocument graphDocument = new GraphDocument.Builder().graphs(List.of(graph)).build();
 
     // WIBBLE id prefix is not in the default list, so add it here so that nodes and edges with this idspace are included
-    CurieUtil curieUtil = CurieUtilBuilder.withDefaultsAnd(ImmutableMap.of("WIBBLE", "http://wibble.org/WIBBLE_"));
+    CurieUtil curieUtil = CurieUtilBuilder.withDefaultsAnd(Map.of("WIBBLE", "http://wibble.org/WIBBLE_"));
 
     OboGraphDocumentAdaptor instance = OboGraphDocumentAdaptor.builder()
       .curieUtil(curieUtil)
-      .wantedTermIdPrefixes(ImmutableSet.of("WIBBLE"))
+      .wantedTermIdPrefixes(Set.of("WIBBLE"))
       .build(graphDocument);
 
     Term expectedTerm = Term.of(TermId.of("WIBBLE:0000000"), "They have no word for 'fluffy'");
-    assertEquals(ImmutableList.of(expectedTerm), instance.getTerms());
+    assertEquals(List.of(expectedTerm), instance.getTerms());
     assertTrue(instance.getRelationships().isEmpty());
   }
 
   @Test
-  void throwsExceptionWhenUnknownFilterIdSupplied() {
+  public void throwsExceptionWhenUnknownFilterIdSupplied() {
 
     Node root = new Node.Builder()
       .id("http://purl.obolibrary.org/obo/HP_0000001")
@@ -189,27 +188,27 @@ class OboGraphDocumentAdaptorTest {
       .type(Node.RDFTYPES.CLASS)
       .build();
 
-    List<Node> nodes = ImmutableList.of(root, unknown);
+    List<Node> nodes = List.of(root, unknown);
 
     Edge edge = new Edge.Builder().sub(unknown.getId()).pred("is_a").obj(root.getId()).build();
-    List<Edge> edges = ImmutableList.of(edge);
+    List<Edge> edges = List.of(edge);
 
     Graph graph = new Graph.Builder().nodes(nodes).edges(edges).build();
-    GraphDocument graphDocument = new GraphDocument.Builder().graphs(ImmutableList.of(graph)).build();
+    GraphDocument graphDocument = new GraphDocument.Builder().graphs(List.of(graph)).build();
 
     // WIBBLE id prefix is not in the default list, so add it here so that nodes and edges with this idspace are included
-    CurieUtil curieUtil = CurieUtilBuilder.withDefaultsAnd(ImmutableMap.of("WIBBLE", "http://wibble.org/WIBBLE_"));
+    CurieUtil curieUtil = CurieUtilBuilder.withDefaultsAnd(Map.of("WIBBLE", "http://wibble.org/WIBBLE_"));
 
     assertThrows(PhenolRuntimeException.class,
       () -> OboGraphDocumentAdaptor.builder()
       .curieUtil(curieUtil)
-      .wantedTermIdPrefixes(ImmutableSet.of("FROOD"))
+      .wantedTermIdPrefixes(Set.of("FROOD"))
       .build(graphDocument),
       "Unable to filter terms for prefix(s) [FROOD] as these not mapped. Add the mapping to CurieUtil.");
   }
 
   @Test
-  void happyPath() {
+  public void happyPath() {
 
     Node root = new Node.Builder()
       .id("http://purl.obolibrary.org/obo/HP_0000001")
@@ -229,11 +228,11 @@ class OboGraphDocumentAdaptorTest {
       .type(Node.RDFTYPES.CLASS)
       .build();
 
-    List<Node> nodes = ImmutableList.of(root, modeOfInheritance, phenotypicAbnormality);
+    List<Node> nodes = List.of(root, modeOfInheritance, phenotypicAbnormality);
 
     Edge moiRoot = new Edge.Builder().sub(modeOfInheritance.getId()).pred("is_a").obj(root.getId()).build();
     Edge paRoot = new Edge.Builder().sub(phenotypicAbnormality.getId()).pred("is_a").obj(root.getId()).build();
-    List<Edge> edges = ImmutableList.of(moiRoot, paRoot);
+    List<Edge> edges = List.of(moiRoot, paRoot);
 
     Meta meta = new Meta.Builder()
       .version("releases/2018-10-09")
@@ -241,7 +240,7 @@ class OboGraphDocumentAdaptorTest {
       .build();
 
     Graph graph = new Graph.Builder().meta(meta).nodes(nodes).edges(edges).build();
-    GraphDocument graphDocument = new GraphDocument.Builder().graphs(ImmutableList.of(graph)).build();
+    GraphDocument graphDocument = new GraphDocument.Builder().graphs(List.of(graph)).build();
 
     OboGraphDocumentAdaptor instance = OboGraphDocumentAdaptor.builder().build(graphDocument);
 
@@ -249,13 +248,13 @@ class OboGraphDocumentAdaptorTest {
     Term moiTerm = Term.of(TermId.of("HP:0000005"), "Mode of inheritance");
     Term paTerm = Term.of(TermId.of("HP:0000118"), "Phenotypic abnormality");
 
-    assertEquals(ImmutableList.of(rootTerm, moiTerm, paTerm), instance.getTerms());
+    assertEquals(List.of(rootTerm, moiTerm, paTerm), instance.getTerms());
 
-    Relationship moiRootRel = new Relationship(moiTerm.getId(), rootTerm.getId(), 1, RelationshipType.IS_A);
-    Relationship paRootRel = new Relationship(paTerm.getId(), rootTerm.getId(), 2, RelationshipType.IS_A);
+    Relationship moiRootRel = new Relationship(moiTerm.id(), rootTerm.id(), 1, RelationshipType.IS_A);
+    Relationship paRootRel = new Relationship(paTerm.id(), rootTerm.id(), 2, RelationshipType.IS_A);
 
-    assertEquals(ImmutableList.of(moiRootRel, paRootRel), instance.getRelationships());
-    assertEquals(ImmutableMap.of("data-version", "releases/2018-10-09"), instance.getMetaInfo());
+    assertEquals(List.of(moiRootRel, paRootRel), instance.getRelationships());
+    assertEquals(Map.of("data-version", "releases/2018-10-09"), instance.getMetaInfo());
 
     Ontology hpoOntology = instance.buildOntology();
     assertEquals(TermId.of("HP:0000001"), hpoOntology.getRootTermId());
