@@ -1,9 +1,9 @@
 package org.monarchinitiative.phenol.io.utils;
 
-import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
 import org.prefixcommons.CurieUtil;
 
+import java.util.Map;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -11,25 +11,25 @@ import static org.junit.jupiter.api.Assertions.*;
 /**
  * @author Jules Jacobsen <j.jacobsen@qmul.ac.uk>
  */
-class CurieUtilBuilderTest {
+public class CurieUtilBuilderTest {
 
   @Test
-  void defaultCurieMap() {
+  public void defaultCurieMap() {
     assertFalse(CurieUtilBuilder.defaultCurieMap().isEmpty());
   }
 
   @Test
-  void defaultCurieUtil() {
+  public void defaultCurieUtil() {
     CurieUtil instance = CurieUtilBuilder.defaultCurieUtil();
     assertEquals(Optional.of("HP:0000001"), instance.getCurie("http://purl.obolibrary.org/obo/HP_0000001"));
   }
 
   @Test
-  void defaultCurieUtilWithDefaultsAndUserDefinedResource() {
+  public void defaultCurieUtilWithDefaultsAndUserDefinedResource() {
     CurieUtil defaultCurieUtil = CurieUtilBuilder.defaultCurieUtil();
     assertFalse(defaultCurieUtil.getCurieMap().containsKey("WIBBLE"));
 
-    CurieUtil instance = CurieUtilBuilder.withDefaultsAnd(ImmutableMap.of("WIBBLE", "http://purl.obolibrary.org/obo/WIBBLE_"));
+    CurieUtil instance = CurieUtilBuilder.withDefaultsAnd(Map.of("WIBBLE", "http://purl.obolibrary.org/obo/WIBBLE_"));
     assertTrue(instance.getCurieMap().containsKey("WIBBLE"));
     assertEquals(Optional.of("WIBBLE:0000001"), instance.getCurie("http://purl.obolibrary.org/obo/WIBBLE_0000001"));
     assertEquals("http://purl.obolibrary.org/obo/WIBBLE_", instance.getExpansion("WIBBLE"));
@@ -37,8 +37,8 @@ class CurieUtilBuilderTest {
   }
 
   @Test
-  void curieUtilWithUserSpecifiedMappingsOnly() {
-    ImmutableMap<String, String> userDefinedCurieMap = ImmutableMap.of(
+  public void curieUtilWithUserSpecifiedMappingsOnly() {
+    Map<String, String> userDefinedCurieMap = Map.of(
       "WIBBLE", "http://purl.obolibrary.org/obo/WIBBLE_",
       "FLUFFY", "http://purl.obolibrary.org/obo/FLUFFY_"
     );
